Stylistically fixing the search results listing so that text does not wrap to the next line.
Also, fixed an issue where the "More Information" field would not appear when selecting an item directly from the search menu.

--- a/src/stylesheets/SearchResults.scss
+++ b/src/stylesheets/SearchResults.scss
@@ -15,22 +15,28 @@
     &:last-child {
         border-bottom: none;
     }
-    & .name {
-        font-size: 14px;
-        color: #555;
-    }
-    & .terms {
-        font-size: 10px;
-        color: #999;
-    }
-    & .address {
-        font-size: 10px;
-        color: #666;
-    }
-    & hr {
-        height: 2px;
-        visibility: hidden;
-        margin-bottom: -1px;
+    & .content {
+        width: 70%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        & .name {
+            font-size: 14px;
+            color: #555;
+        }
+        & .terms {
+            font-size: 10px;
+            color: #999;
+        }
+        & .address {
+            font-size: 10px;
+            color: #666;
+        }
+        & hr {
+            height: 2px;
+            visibility: hidden;
+            margin-bottom: -1px;
+        }
     }
 }
 
